<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.mandilee.congratulations.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Title.Top"
            android:text="@string/c"
            android:textColor="@color/colourOne" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/o"
            android:textColor="@color/colourTwo" />

        <TextView
            style="@style/Title.Bottom"
            android:text="@string/n"
            android:textColor="@color/colourThree" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/g"
            android:textColor="@color/colourFour" />

        <TextView
            style="@style/Title.Top"
            android:text="@string/r"
            android:textColor="@color/colourFive" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/a"
            android:textColor="@color/colourSix" />

        <TextView
            style="@style/Title.Bottom"
            android:text="@string/t"
            android:textColor="@color/colourSeven" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/u"
            android:textColor="@color/colourEight" />

        <TextView
            style="@style/Title.Top"
            android:text="@string/l"
            android:textColor="@color/colourNine" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/a"
            android:textColor="@color/colourTen" />

        <TextView
            style="@style/Title.Bottom"
            android:text="@string/t"
            android:textColor="@color/colourEleven" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/i"
            android:textColor="@color/colourTwelve" />

        <TextView
            style="@style/Title.Top"
            android:text="@string/o"
            android:textColor="@color/colourThirteen" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/n"
            android:textColor="@color/colourFourteen" />

        <TextView
            style="@style/Title.Bottom"
            android:text="@string/s"
            android:textColor="@color/colourFifteen" />

        <TextView
            style="@style/Title.Center"
            android:text="@string/exclam"
            android:textColor="@color/colourSixteen" />

        <TextView
            style="@style/Title.Top"
            android:text="@string/exclam"
            android:textColor="@color/colourSeventeen" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:padding="@dimen/randomPadding"
                    android:text="@string/well_done_jenny"
                    android:textSize="@dimen/mainTextSize" />
            </TableRow>

            <TableRow android:layout_weight="3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/imagePadding"
                    android:contentDescription="@string/well_done_jenny"
                    android:gravity="center"
                    android:src="@drawable/jenny" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textSize="@dimen/mainTextSize" />
            </TableRow>

            <TableRow android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cancer_research_uk"
                    android:src="@drawable/cruk" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/just_giving"
                    android:src="@drawable/just_giving" />
            </TableRow>

            <TableRow android:layout_weight="1">

                <Button
                    android:id="@+id/donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_span="2"
                    android:background="@drawable/donate_button"
                    android:text="@string/donate" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>